syntax = "proto3";

package pb;

option go_package = "github.com/DebdipWritesCode/Munshiji/backend/pb";

message DeleteScoreRequest {
  int32 score_id = 1;
}

message DeleteScoreResponse {
  bool success = 1;
}